style(aboutCarrier): fix overflow at 1440p width

--- a/src/components/Bubble/Bubble.scss
+++ b/src/components/Bubble/Bubble.scss
@@ -17,8 +17,7 @@
   font-size: calc(60% + 1vmin);
   z-index: 100;
   @media screen and (max-width: 1440px) {
-    font-size: calc(25% + 1vmin);
-    height: 15vh;
+    font-size: calc(40% + 1vmin);
   }
   @media screen and (max-width: 1300px) {
     font-size: calc(25% + 1vmin);
